; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_caption.c_caption_frame_decode_text.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_caption.c_caption_frame_decode_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LIBCAPTION_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @caption_frame_decode_text(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [5 x i8], align 1
  %7 = alloca [5 x i8], align 1
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %11 = getelementptr inbounds [5 x i8], [5 x i8]* %7, i64 0, i64 0
  %12 = call i64 @eia608_to_utf8(i32 %9, i32* %5, i8* %10, i8* %11)
  store i64 %12, i64* %8, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @eia608_is_westeu(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @caption_frame_backspace(i32* %17)
  br label %19

19:                                               ; preds = %16, %2
  %20 = load i64, i64* %8, align 8
  %21 = icmp ult i64 0, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %19
  %23 = load i32*, i32** %3, align 8
  %24 = getelementptr inbounds [5 x i8], [5 x i8]* %6, i64 0, i64 0
  %25 = call i32 @eia608_write_char(i32* %23, i8* %24)
  br label %26

26:                                               ; preds = %22, %19
  %27 = load i64, i64* %8, align 8
  %28 = icmp ult i64 1, %27
  br i1 %28, label %29, label %33

29:                                               ; preds = %26
  %30 = load i32*, i32** %3, align 8
  %31 = getelementptr inbounds [5 x i8], [5 x i8]* %7, i64 0, i64 0
  %32 = call i32 @eia608_write_char(i32* %30, i8* %31)
  br label %33

33:                                               ; preds = %29, %26
  %34 = load i32, i32* @LIBCAPTION_OK, align 4
  ret i32 %34
}

declare dso_local i64 @eia608_to_utf8(i32, i32*, i8*, i8*) #1

declare dso_local i64 @eia608_is_westeu(i32) #1

declare dso_local i32 @caption_frame_backspace(i32*) #1

declare dso_local i32 @eia608_write_char(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
